--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2002 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.48 Tue, 26 Mar 2002 11:29:37 +0100 didier $
+% PRCS: $Id: fixme.dtx 1.49 Tue, 26 Mar 2002 15:41:18 +0100 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -271,18 +271,17 @@
 %
 % \section{Changes}
 % \begin{itemize}
-% \item[v2.0] New feature: note levels.\\
-% New feature: \fixme{} note counters and usage summary.\\
-% Suggestions from Kasper B. Graversen |<kbg@dkik.dk>|.
+% \item[v2.0] New feature: note levels\\
+% New feature: \fixme{} note counters and usage summary\\
+% Suggestions from Kasper B. Graversen |<kbg@dkik.dk>|\\
+% Support for Spanish thanks to Agust\'in Mart\'in |<agusmb@netscape.net>|
 % \item[v1.5] New appearance option: \texttt{inline}.
-% \item[v1.4] Support for the koma-script classes.\\
+% \item[v1.4] Support for the koma-script classes\\
 % Fix bug reported by Ulf Jaenicke-Roessler
 % |<ujr@physik.phy.tu-dresden.de>|: the |\listoffixmes| command didn't work
 % when called before the first \fixme{} note.
-% \item[v1.3] Support for Italian thanks to Riccardo Murri
-%   |<murri@phc.unipi.it>|.
-% \item[v1.2] Support for German thanks to Harald Harders
-% |<h.harders@tu-bs.de>|.
+% \item[v1.3] Support for Italian thanks to Riccardo Murri |<murri@phc.unipi.it>|
+% \item[v1.2] Support for German thanks to Harald Harders |<h.harders@tu-bs.de>|
 % \end{itemize}
 %
 % \StopEventually{\par Well, I think that's it. Enjoy using \fixme{}!
@@ -730,65 +729,63 @@
 %    \end{macrocode}
 % \subsection{Language processing}
 % Options that control which language is selected:
-% ^^A \changes{v1.3}{2001/04/23}{Support for Italian thanks to Riccardo Murri}
-% ^^A \changes{v1.2}{2000/12/26}{Support for German thanks to Harald Harders}
 %    \begin{macrocode}
 \DeclareOption{english}{%
-  \renewcommand*\fixmenoteprefix{\fixmelogo~note}
-  \renewcommand*\fixmewarningprefix{\fixmelogo~warning}
-  \renewcommand*\fixmeerrorprefix{\fixmelogo~error}
+  \renewcommand*\fixmenoteprefix{\fixmelogo~Note}
+  \renewcommand*\fixmewarningprefix{\fixmelogo~Warning}
+  \renewcommand*\fixmeerrorprefix{\fixmelogo~Error}
   \renewcommand*\fixmefatalprefix{\fixmelogo}
   \renewcommand*\fixmeindexname{\fixmelogo}
-  \renewcommand*\fixmenoteindexname{**a@notes:!}
-  \renewcommand*\fixmewarningindexname{**b@warnings:!}
-  \renewcommand*\fixmeerrorindexname{**c@errors:!}
+  \renewcommand*\fixmenoteindexname{**a@Notes:!}
+  \renewcommand*\fixmewarningindexname{**b@Warnings:!}
+  \renewcommand*\fixmeerrorindexname{**c@Errors:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{List of Corrections}}
 \DeclareOption{french}{%
-  \renewcommand*\fixmenoteprefix{\fixmelogo~note}
-  \renewcommand*\fixmewarningprefix{\fixmelogo~attn}
-  \renewcommand*\fixmeerrorprefix{\fixmelogo~err}
+  \renewcommand*\fixmenoteprefix{\fixmelogo~Note}
+  \renewcommand*\fixmewarningprefix{\fixmelogo~Attention}
+  \renewcommand*\fixmeerrorprefix{\fixmelogo~Erreur}
   \renewcommand*\fixmefatalprefix{\fixmelogo}
   \renewcommand*\fixmeindexname{\fixmelogo}
-  \renewcommand*\fixmenoteindexname{**a@notes:!}
-  \renewcommand*\fixmewarningindexname{**b@avertissements:!}
-  \renewcommand*\fixmeerrorindexname{**c@erreurs:!}
+  \renewcommand*\fixmenoteindexname{**a@Notes:!}
+  \renewcommand*\fixmewarningindexname{**b@Avertissements:!}
+  \renewcommand*\fixmeerrorindexname{**c@Erreurs:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Liste des Corrections}}
 \DeclareOption{francais}{\ExecuteOptions{french}}
 \DeclareOption{spanish}{%
-  \renewcommand*\fixmenoteprefix{\fixmelogo~nota}
-  \renewcommand*\fixmewarningprefix{\fixmelogo~aviso}
-  \renewcommand*\fixmeerrorprefix{\fixmelogo~error}
+  \renewcommand*\fixmenoteprefix{\fixmelogo~Nota}
+  \renewcommand*\fixmewarningprefix{\fixmelogo~Aviso}
+  \renewcommand*\fixmeerrorprefix{\fixmelogo~Error}
   \renewcommand*\fixmefatalprefix{\fixmelogo}
   \renewcommand*\fixmeindexname{\fixmelogo}
-  \renewcommand*\fixmenoteindexname{**a@notas:!}
-  \renewcommand*\fixmewarningindexname{**b@avisos:!}
-  \renewcommand*\fixmeerrorprefix{**c@errores:!}
+  \renewcommand*\fixmenoteindexname{**a@Notas:!}
+  \renewcommand*\fixmewarningindexname{**b@Avisos:!}
+  \renewcommand*\fixmeerrorprefix{**c@Errores:!}
   \renewcommand*\fixmefatalindexname{}
-  \renewcommand*{\listfixmename}{Lista de las correctiones}}
+  \renewcommand*{\listfixmename}{Lista de Correcciones}}
 \DeclareOption{italian}{%
-  \renewcommand*\fixmenoteprefix{\fixmelogo~nota}
-  \renewcommand*\fixmewarningprefix{\fixmelogo~avviso}
-  \renewcommand*\fixmeerrorprefix{\fixmelogo~errore}
+  \renewcommand*\fixmenoteprefix{\fixmelogo~Nota}
+  \renewcommand*\fixmewarningprefix{\fixmelogo~Avviso}
+  \renewcommand*\fixmeerrorprefix{\fixmelogo~Errore}
   \renewcommand*\fixmefatalprefix{\fixmelogo}
   \renewcommand*\fixmeindexname{\fixmelogo}
-  \renewcommand*\fixmenoteindexname{**a@note:!}
-  \renewcommand*\fixmewarningindexname{**b@avvisi:!}
-  \renewcommand*\fixmeerrorprefix{**c@errori:!}
+  \renewcommand*\fixmenoteindexname{**a@Note:!}
+  \renewcommand*\fixmewarningindexname{**b@Avvisi:!}
+  \renewcommand*\fixmeerrorprefix{**c@Errori:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Corrigenda}}
 \DeclareOption{german}{%
-  \renewcommand*\fixmenoteprefix{\fixmelogo~anm}
-  \renewcommand*\fixmewarningprefix{\fixmelogo~warnung}
-  \renewcommand*\fixmeerrorprefix{\fixmelogo~error}
+  \renewcommand*\fixmenoteprefix{\fixmelogo~Anm}
+  \renewcommand*\fixmewarningprefix{\fixmelogo~Warnung}
+  \renewcommand*\fixmeerrorprefix{\fixmelogo~Fehler}
   \renewcommand*\fixmefatalprefix{\fixmelogo}
   \renewcommand*\fixmeindexname{fixmelogo}
-  \renewcommand*\fixmenoteindexname{**a@anmerkungen:!}
-  \renewcommand*\fixmewarningindexname{**b@warnungen:!}
-  \renewcommand*\fixmeerrorprefix{**c@errors:!}
+  \renewcommand*\fixmenoteindexname{**a@Anmerkungen:!}
+  \renewcommand*\fixmewarningindexname{**b@Warnungen:!}
+  \renewcommand*\fixmeerrorprefix{**c@Fehler:!}
   \renewcommand*\fixmefatalindexname{}
-  \renewcommand*{\listfixmename}{Liste der Korrekturen}}
+  \renewcommand*{\listfixmename}{Verzeichnis der Korrekturen}}
 \DeclareOption{ngerman}{%
   \ExecuteOptions{german}}
 
