--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-26  Didier Verna  <didier@lrde.epita.fr>
+
+	* fixme.dtx: support for Spanish by Augustin Martin
+	<agusmb@netscape.net>
+
 2002-02-19  Didier Verna  <didier@lrde.epita.fr>
 
 	* fixme.dtx: implemented fixme notes levels, usage counters and
@@ -11,8 +16,8 @@
 
 	* Fixed missing \DescribeEnv{italian}.
 
-	* fixme.dtx: added support for Italian (from Riccardo Murri
-	<murri@phc.unipi.it>)
+	* fixme.dtx: support for Italian by Riccardo Murri
+	<murri@phc.unipi.it>
 
 2001-03-26  Didier Verna  <didier@lrde.epita.fr>
 
@@ -42,7 +47,7 @@
 	\DescribeMacro.
 	Moved the descriptions of \listfixmename to the "Main Macros"
 	section, and added a comment in the code.
-	Added support for german (from Harald Harders <h.harders@tu-bs.de>).
+	Support for german by Harald Harders <h.harders@tu-bs.de>.
 
 2000-12-11  Didier Verna  <didier@lrde.epita.fr>
 
