--- a/README
+++ b/README
@@ -45,8 +45,9 @@ message. FiXme also comes with support for AUC-TeX.
 --------------
 *** New feature: note levels
 *** New feature: note counters, FiXme usage summary
-*** Suggestions from Kasper B. Graversen <kbg@dkik.dk>.
+*** Suggestions from Kasper B. Graversen <kbg@dkik.dk>
 *** Support for Spanish
+thanks to Augustín Martín <agusmb@netscape.net>
 
 ** Version 1.5
 --------------
@@ -55,20 +56,20 @@ puts notes directly in the text.
 
 ** Version 1.4
 --------------
-*** Support for the koma-script classes.
+*** Support for the koma-script classes
 *** Fix bug in \listoffixmes
 reported by Ulf Jaenicke-Roessler <ujr@physik.phy.tu-dresden.de>:
-the command didn't work when called before the first fixme note.
+the command didn't work when called before the first fixme note
 
 ** Version 1.3
 --------------
 *** Support for Italian
-thanks to Riccardo Murri <murri@phc.unipi.it>.
+thanks to Riccardo Murri <murri@phc.unipi.it>
 
 ** Version 1.2
 --------------
 *** Support for German
-thanks to Harald Harders <h.harders@tu-bs.de>.
+thanks to Harald Harders <h.harders@tu-bs.de>
 
 
 * Installation
