Committed PRCS version branch-2-0.16
empty

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2002 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.49 Tue, 26 Mar 2002 15:41:18 +0100 didier $
+% PRCS: $Id: fixme.dtx 1.50 Tue, 26 Mar 2002 16:00:14 +0100 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -761,7 +761,7 @@
   \renewcommand*\fixmeindexname{\fixmelogo}
   \renewcommand*\fixmenoteindexname{**a@Notas:!}
   \renewcommand*\fixmewarningindexname{**b@Avisos:!}
-  \renewcommand*\fixmeerrorprefix{**c@Errores:!}
+  \renewcommand*\fixmeerrorindexname{**c@Errores:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Lista de Correcciones}}
 \DeclareOption{italian}{%
@@ -772,7 +772,7 @@
   \renewcommand*\fixmeindexname{\fixmelogo}
   \renewcommand*\fixmenoteindexname{**a@Note:!}
   \renewcommand*\fixmewarningindexname{**b@Avvisi:!}
-  \renewcommand*\fixmeerrorprefix{**c@Errori:!}
+  \renewcommand*\fixmeerrorindexname{**c@Errori:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Corrigenda}}
 \DeclareOption{german}{%
@@ -783,7 +783,7 @@
   \renewcommand*\fixmeindexname{fixmelogo}
   \renewcommand*\fixmenoteindexname{**a@Anmerkungen:!}
   \renewcommand*\fixmewarningindexname{**b@Warnungen:!}
-  \renewcommand*\fixmeerrorprefix{**c@Fehler:!}
+  \renewcommand*\fixmeerrorindexname{**c@Fehler:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Verzeichnis der Korrekturen}}
 \DeclareOption{ngerman}{%
