Committed PRCS version branch-2-0.17
empty

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2002 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.50 Tue, 26 Mar 2002 16:00:14 +0100 didier $
+% PRCS: $Id: fixme.dtx 1.51 Tue, 26 Mar 2002 16:12:14 +0100 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -780,7 +780,7 @@
   \renewcommand*\fixmewarningprefix{\fixmelogo~Warnung}
   \renewcommand*\fixmeerrorprefix{\fixmelogo~Fehler}
   \renewcommand*\fixmefatalprefix{\fixmelogo}
-  \renewcommand*\fixmeindexname{fixmelogo}
+  \renewcommand*\fixmeindexname{\fixmelogo}
   \renewcommand*\fixmenoteindexname{**a@Anmerkungen:!}
   \renewcommand*\fixmewarningindexname{**b@Warnungen:!}
   \renewcommand*\fixmeerrorindexname{**c@Fehler:!}
