--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-03  Didier Verna  <didier@lrde.epita.fr>
+
+	* version 2.0 released.
+
 2002-03-26  Didier Verna  <didier@lrde.epita.fr>
 
 	* fixme.dtx: support for Spanish by Augustin Martin
