--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2002 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.53 Tue, 23 Apr 2002 17:58:20 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.54 Tue, 23 Apr 2002 18:24:54 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -62,9 +62,9 @@
 %%   Right brace   \}     Tilde         \~}
 %
 % ^^A $Format: "% \\newcommand\\version{v$Version$}"$
-% \newcommand\version{v2.0}
+% \newcommand\version{v2.1}
 % ^^A $Format: "% \\newcommand\\releasedate{$ReleaseDate$}"$
-% \newcommand\releasedate{2002/04/03}
+% \newcommand\releasedate{2002/04/23}
 % ^^A $Format: "% \\newcommand\\packagecopyright{$LaTeXCopyright$}"$
 % \newcommand\packagecopyright{Copyright \copyright{} 1998--2002 Didier Verna}
 % \newcommand\fixme{\textsf{FiXme}}
@@ -271,6 +271,8 @@
 %
 % \section{Changes}
 % \begin{itemize}
+% \item[v2.1] Fix bug reported by Knut Lickert |<knut@lickert.net>|: index
+% entries were unconditionally built.
 % \item[v2.0] New feature: note levels\\
 % New feature: \fixme{} note counters and usage summary\\
 % Suggestions from Kasper B. Graversen |<kbg@dkik.dk>|\\
@@ -294,7 +296,7 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
 ¡ $Format: "\\ProvidesPackage{fixme}[$ReleaseDate$ v$Version$"$
-\ProvidesPackage{fixme}[2002/04/03 v2.0
+\ProvidesPackage{fixme}[2002/04/23 v2.1
                         Insert fixme notes in your documents]
 
 \newcommand*\fixmelogo{\textsf{FiXme}}
@@ -309,7 +311,6 @@
 %       class dependant fashion. Classes currently recognized are article,
 %       report, book and their koma-script replacements.
 %
-% ^^A \changes{v1.4}{2001/09/04}{Fix bug reported by Ulf Jaenicke-Roessler}
 %       In order to prevent the List of Fixme's chapter heading from being
 %       generated when there are no fixmes, a test on the existence of the lox
 %       file is performed. There's a slight bug left however: after removing
@@ -462,7 +463,6 @@
 %    \end{macrocode}
 %
 % \subsection{Layout macros}
-% ^^A \changes{v1.5}{2002/02/18}{New appearance option: \texttt{inline}}
 % \begin{macro}{\FXInline}
 %   \begin{macro}{\FXMargin}
 %     \begin{macro}{\FXFootnote}
